--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -170,10 +170,9 @@ Nachricht erstellen:
 *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Empfänger:innen mit dieser Auftrags-ID oder Kontakt-ID vorgeschlagen (siehe <<#image-messenger-new-message-suggestion-list>>).
 . Gib den Betreff deiner Nachricht im Feld *Betreff* ein.
 . Gib im Textfeld die Nachricht ein.
-. Klicke auf icon:attach_file[set=material], um der Nachricht Anhänge hinzuzufügen.
-. Klicke auf icon:local_offer[set=material], um der Nachricht Tags zuzuweisen.
-. Wähle mit einem Klick auf icon:more_vert[set=material] ggf. weitere Optionen.
-. Beachte dazu die Erläuterungen in <<#table-create-new-message>>.
+. Klicke auf *Anhänge hinzufügen* (icon:attach_file[set=material]), um der Nachricht Anhänge hinzuzufügen.
+. Klicke auf *Der Nachricht Tags zuweisen* (icon:local_offer[set=material]), um der Nachricht Tags zuzuweisen.
+. Wähle mit einem Klick auf icon:more_vert[set=material] ggf. weitere Optionen. Beachte dazu die Erläuterungen in <<#table-create-new-message>>.
 . Klicke auf icon:forward_to_inbox[set=material] *SENDEN*.
 
 [[image-messenger-new-message-suggestion-list]]
@@ -208,27 +207,24 @@ Die folgenden Dateitypen sind als Anhang in der Nachricht zulässig: bmp, csv, g
 In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargestellt. +
 *_Hinweis:_* Sobald der Flüstermodus für diese Nachricht aktiviert ist, kann die Schaltfläche *Abrechnen* _nicht_ mehr aktiviert werden.
 
-| *Tags für Nachricht* (icon:local_offer[set=material])
+| *Der Nachricht Tags zuweisen* (icon:local_offer[set=material])
 |Mit einem Klick auf icon:local_offer[set=material] kannst du nach Tags suchen und bereits bestehende Tags für die Nachricht wählen (icon:check_box[set=material, role=skyBlue]), neue Tags hinzufügen (icon:add[set=material]) und bestehende Tags bearbeiten (icon:edit[set=material]). +
 *_Hinweis:_* Sobald du einen Tag für die Nachricht gewählt hast, wird die Schaltfläche in blau angezeigt: icon:local_offer[set=material, role=skyBlue]. So erkennst du auf einen Blick, ob der Nachricht Tags zugewiesen sind. +
 *_Wichtig:_* Damit du die Nachricht abrechnen kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen.
 
-| *Abrechnen* (icon:more_vert[set=material)])
+| *Nachricht abrechnen* (icon:more_vert[set=material])
 |Du kannst eine Nachricht immer dann abrechnen, wenn es sich _nicht_ um eine geflüsterte Nachricht handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* wird geändert in icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. +
 *_Hinweis:_* Sobald die Schaltfläche *Abrechnen* aktiviert ist, kann für diese Nachricht _nicht_ der Flüstermodus aktiviert werden.
 
-| *Timer* (icon:more_vert[set=material)])
+| *Timer* (icon:more_vert[set=material])
 |Du kannst für jede Nachricht einen Timer starten. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Timer* aktivierst (icon:toggle_on[set=material, role=skyBlue]), startet automatisch der Timer neben der Schaltfläche icon:forward_to_inbox[set=material] *SENDEN*. +
 Klicke auf icon:pause_circle[set=material], um den Timer anzuhalten bzw. auf icon:play_circle[set=material], damit die Zeit weiterläuft.
 
-| *Inboxen verwalten*
-|Mit einem Klick auf icon:edit[set=material] *Inboxen verwalten* wirst du in das Menü *Einrichtung » Assistenten » Grundeinrichtung* weitergeleitet. Hier kannst du die Inboxen über den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* bearbeiten.
-////
-TODO: Inboxen umbenennen in Posteingang
-////
+| *Posteingänge verwalten*
+|Mit einem Klick auf icon:edit[set=material] *Posteingänge verwalten* wirst du in das Menü *Einrichtung » Assistenten » Grundeinrichtung* weitergeleitet. Hier kannst du die Inboxen über den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* bearbeiten.
 
-| _Name der aktuell gewählten Inbox_
-| Mit einem Klick auf icon:arrow_drop_down[set=material] kannst du eine andere Inbox aus der Dropdown-Liste wählen. In der Liste werden die Namen der Inboxen angezeigt, für die du den <<#assistent-durchlaufen, Assistenten durchlaufen>> hast.
+| _Name des aktuell gewählten Posteingangs_
+| Mit einem Klick auf icon:arrow_drop_down[set=material] kannst du einen anderen Posteingang aus der Dropdown-Liste wählen. In der Liste werden die Namen der Posteingänge angezeigt, für die du jeweils den <<#assistent-durchlaufen, Assistenten durchlaufen>> hast.
 
 | *SENDEN*
 |Mit einem Klick auf icon:forward_to_inbox[set=material] *SENDEN* wird die Nachricht gesendet. +
@@ -354,32 +350,62 @@ Klicke in der Zeile des gespeicherten Filters auf icon:star[set=material] *Als S
 
 In der Übersicht des Messenger kannst du dir die folgenden Spalten anzeigen lassen:
 
-* Auswahl
-** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
-* Status
-** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
-* Abgekürzte ID
-* Herkunft
-** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
+[[table-configure-columns-overview]]
+.Übersicht Messenger: Spalten konfigurieren
+[cols="1,3"]
+|====
+|Spalte |Erläuterung
+
+|Relationen erweitern
+|Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
+
+|Auswahl
+|Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
+
+|Status
+|Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
+
+
+|Abgekürzte ID
+|Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
+
+|Herkunft
+|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
-* Relationen
-** Hier werden die Relationen zur Nachricht angezeigt, z.B. die Kontakt-ID oder die Auftrags-ID.
-* Betreff
-* Erstellt am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde.
-* Aktualisiert am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde.
-* Tags
-** Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Nachricht zugeordnet sind.
-* Anhänge
-** In der Spalte icon:attach_file[set=material] wird die Anzahl der Anhänge angezeigt.
-* Abgerechnete Nachrichten
-** In der Spalte icon:credit_card[set=material] wird die Summe der abgerechneten Nachrichten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abgerechnete Minuten
-** In der Spalte icon:av_timer[set=material] wird die Summe der abgerechneten Minuten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abonniert
-** In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
-* <<#kontextmenue, Kontextmenü>>
+
+|Relationen
+|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+
+|Betreff
+|Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
+// prüfen, ob das so stimmt.
+
+|Erstellt am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Aktualisiert am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Tags
+|Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
+// prüfen, ob das so stimmt.
+
+|Anhänge
+|In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
+
+|Abgerechnete Nachrichten
+|In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
+
+|Abgerechnete Minuten
+|In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
+
+|Abonniert
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+
+|Kontextmenü
+|Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
+
+|====
 
 Über die Schaltfläche *Spalten konfigurieren* (icon:settings[set=material]) ganz oben rechts in der Übersicht kannst du bereits angezeigte Spalten in der Übersicht wieder deaktivieren.
 
@@ -499,7 +525,7 @@ Konversation als erledigt markieren:
 
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als erledigt markieren möchtest, auf icon:more_vert[set=material].
-. Klicke auf icon:task[set=material] *Konversation als erledigt markieren*. +
+. Klicke auf icon:circle[set=material] *Konversation als erledigt markieren*. +
 → Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=skyBlue] angezeigt.
 
 [#kontextmenue-als-nicht-erledigt-markieren]
@@ -511,8 +537,8 @@ Gehe wie im Folgenden beschrieben vor, um eine Konversation aus der Übersicht h
 Konversation als nicht erledigt markieren:
 
 . Öffne das Menü *CRM » Messenger (Testphase)*.
-. Klicke in der Zeile der Konversation, die du als nicht erledigt markieren möchtest, auf icon:more_vert[set=material].
-. Klicke auf icon:remove_done[set=material] *Konversation als nicht erledigt markieren*. +
+. Klicke in der Zeile der Konversation, die du als nicht erledigt markieren möchtest, auf icon:more_vert[set=material]
+. Klicke auf icon:radio_button_unchecked[set=material] *Konversation als nicht erledigt markieren*. +
 → Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=skyBlue] entfernt.
 
 [#kontextmenue-konversation-abonnieren-nicht-abonnieren]
@@ -608,9 +634,20 @@ TODO: Screenshot von abgerechneter Nachricht einfügen.
 
 Das <<#kontextmenue, Kontextmenü für die Konversationen>> hast du weiter oben auf dieser Seite bereits kennengelernt. Natürlich kannst du auch einzelne Nachrichten über ein Kontextmenü bearbeiten. Gehe dazu wie in den folgenden Unterkapiteln beschrieben vor.
 
+////
+TODO: Screenshot von einer einzelnen Nachricht mit den Mini-Icons hier einfügen und erklären.
+////
+
+
 [[image-messenger-edit-single-message]]
 .Einzelne Nachricht über das Kontextmenü bearbeiten
 image::crm:messenger-edit-single-message.png[width=640, height=360]
+
+////
+TODO: ggf. Screenshot erneuern, da mittlerweile die Funktion zum Öffnen der Nachricht im plain text über den Pfeil hinzugekommen ist und die Funktion Anhänge herunterladen im Kontextmenü ergänzt wurde.
+////
+
+Sobald du eine Nachricht innerhalb einer Konversation gewählt hast, kannst du mit einem Klick auf icon:chevron_right[set=material] am Anfang der Nachricht den Inhalt der Nachricht im reinen Textformat anzeigen. So kannst du bereits eine Vorschau auf den Inhalt der Nachricht sehen, ohne die gesamte Nachricht zu <<#einzelne-nachricht-oeffnen, öffnen>>.
 
 [#einzelne-nachricht-oeffnen]
 === Nachricht öffnen
@@ -618,23 +655,39 @@ image::crm:messenger-edit-single-message.png[width=640, height=360]
 Um eine Nachricht zu öffnen, kannst du entweder direkt auf die Nachricht klicken. Oder du öffnest das Kontextmenü in der Zeile der Nachricht mit einem Klick auf icon:more_vert[set=material] und dann auf icon:open_link[set=material] *Nachricht öffnen*.
 
 [#einzelne-nachricht-tags-zuweisen]
-=== Tags einer Nachricht zuweisen
+=== Der Nachricht Tags zuweisen
 
 Gehe wie im Folgenden beschrieben vor, um einer einzelnen Nachricht einen Tag zuzuweisen.
 
 [.instruction]
-Tags einer Nachricht zuweisen:
+Der Nachricht Tags zuweisen:
 
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Öffne die Konversation, die die Nachricht enthält, der du einen Tag zuweisen möchtest.  
 . Öffne die Nachricht mit einem Klick in die Zeile der Nachricht.
-. Klicke auf icon:local_offer[set=material] *Tags*, um eine Liste aller bereits für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* <<#tags-messenger, erstellten>> Tags zu sehen. +
+. Klicke auf icon:local_offer[set=material] *Der Nachricht Tags zuweisen*, um eine Liste aller bereits für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* <<#tags-messenger, erstellten>> Tags zu sehen. +
 *_Tipp:_* Wenn du sehr viele Tags für den Bereich *Nachrichten* bzw. *Nachrichten (kostenpflichtig)* erstellt hast, gib den Namen des Tags in das Suchfeld *Nach Tag suchen* ein.
 . Wähle (icon:check_box[set=material, role=skyBlue]) die Tags, die du der Nachricht zuweisen möchtest. 
 
 ////
 FRAGE: Kann man hier wirklich nur einer einzelnen Nachricht einen Tag zuweisen oder bekommt dann die gesamte Konversation auch den Tag zugewiesen? Wenn nur die Nachricht den Tag erhält, wie verhält es sich dann mit den Filtern in der Suche? Wird der Tag an einzelnen Nachrichten in der Suche berücksichtigt? 
 ////
+
+[#einzelne-nachricht-anhaenge]
+=== Anhänge herunterladen
+
+Du kannst entweder die Anhänge der Nachricht einzeln herunterladen oder alle Anhänge der Nachricht als ZIP-Datei auf deinen Computer herunterladen. 
+
+[.instruction]
+Anhänge herunterladen:
+
+. Öffne das Menü *CRM » Messenger (Testphase)*.
+. Öffne die Konversation, die die Nachricht enthält, deren Anhang bzw. Anhänge du herunterladen möchtest.  
+. Öffne die Nachricht mit einem Klick in die Zeile der Nachricht.
+. Klicke auf icon:more_vert[set=material].
+. Klicke auf icon:attach_file[set=material] *Anhänge*.
+. Klicke auf einen Anhang oder auf icon:file_download[set=material] *Alle Dateien herunterladen*. +
+→ Ein Fenster öffnet sich und du kannst einen Speicherort für die Datei(en) auf deinem Computer wählen.
 
 [#einzelne-nachricht-loeschen]
 === Nachricht löschen
@@ -678,14 +731,14 @@ image::crm:messenger-group-functions-conversations.png[width=640, height=360]
 
 | *Konversationen als ungelesen markieren*
 |icon:mark_email_unread[set=material]
-|Markiert alle gewählten Konversationen als ungelesen.
+|Markiert alle gewählten Konversationen als ungelesen. Die Konversationen werden dann in Fettschrift angezeigt.
 
 | *Konversationen als erledigt markieren*
-|icon:task[set=material]
+|icon:circle[set=material]
 |Markiert alle gewählten Konversationen als erledigt.
 
 | *Konversationen als nicht erledigt markieren*
-|icon:remove_done[set=material]
+|icon:radio_button_unchecked[set=material]
 |Markiert alle gewählten Konversationen als nicht erledigt.
 
 | *Den Konversationen Tags zuweisen*
@@ -709,34 +762,68 @@ In der Navigation auf der linken Seite des Messengers findest du unterhalb des O
 
 Im Ordner *Neue Nachrichten* des Messengers kannst du dir die folgenden Spalten anzeigen lassen:
 
-* Auswahl
-** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
-* Status
-** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
-* Abgekürzte ID
-* Herkunft
-** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
+[[table-configure-columns-new-messages]]
+.Neue Nachrichten: Spalten konfigurieren
+[cols="1,3"]
+|====
+|Spalte |Erläuterung
+
+|Relationen erweitern
+|Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
+
+|Auswahl
+|Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
+
+|Status
+|Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
+
+
+|Abgekürzte ID
+|Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
+
+|Herkunft
+|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
-* Relationen
-** Hier werden die Relationen zur Nachricht angezeigt, z.B. die Kontakt-ID oder die Auftrags-ID.
-* Betreff
-* Erstellt am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde.
-* Aktualisiert am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde.
-* Tags
-** Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Nachricht zugeordnet sind.
-* Anhänge
-** In der Spalte icon:attach_file[set=material] wird die Anzahl der Anhänge angezeigt.
-* Abgerechnete Nachrichten
-** In der Spalte icon:credit_card[set=material] wird die Summe der abgerechneten Nachrichten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abgerechnete Minuten
-** In der Spalte icon:av_timer[set=material] wird die Summe der abgerechneten Minuten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abonniert
-** In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
-* <<#kontextmenue, Kontextmenü>>
+
+|Relationen
+|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+
+|Betreff
+|Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
+// prüfen, ob das so stimmt.
+
+|Erstellt am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Aktualisiert am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Tags
+|Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
+// prüfen, ob das so stimmt.
+
+|Anhänge
+|In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
+
+|Abgerechnete Nachrichten
+|In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
+
+|Abgerechnete Minuten
+|In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
+
+|Abonniert
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+
+|Kontextmenü
+|Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
+
+|====
 
 Über die Schaltfläche *Spalten konfigurieren* (icon:settings[set=material]) ganz oben rechts in der Übersicht kannst du bereits angezeigte Spalten in der Übersicht wieder deaktivieren.
+
+//// 
+TODO: Im Ordner "Neue Nachrichten" gibt es auch eine Gruppenfunktion.
+////
 
 [#meine-nachrichten]
 == Meine Nachrichten
@@ -749,34 +836,68 @@ In der Navigation auf der linken Seite des Messengers findest du unterhalb des O
 
 Im Ordner *Meine Nachrichten* des Messengers kannst du dir die folgenden Spalten anzeigen lassen:
 
-* Auswahl
-** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
-* Status
-** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
-* Abgekürzte ID
-* Herkunft
-** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
+[[table-configure-columns-my-messages]]
+.Meine Nachrichten: Spalten konfigurieren
+[cols="1,3"]
+|====
+|Spalte |Erläuterung
+
+|Relationen erweitern
+|Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
+
+|Auswahl
+|Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
+
+|Status
+|Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
+
+
+|Abgekürzte ID
+|Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
+
+|Herkunft
+|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
-* Relationen
-** Hier werden die Relationen zur Nachricht angezeigt, z.B. die Kontakt-ID oder die Auftrags-ID.
-* Betreff
-* Erstellt am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde.
-* Aktualisiert am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde.
-* Tags
-** Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Nachricht zugeordnet sind.
-* Anhänge
-** In der Spalte icon:attach_file[set=material] wird die Anzahl der Anhänge angezeigt.
-* Abgerechnete Nachrichten
-** In der Spalte icon:credit_card[set=material] wird die Summe der abgerechneten Nachrichten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abgerechnete Minuten
-** In der Spalte icon:av_timer[set=material] wird die Summe der abgerechneten Minuten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abonniert
-** In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
-* <<#kontextmenue, Kontextmenü>>
+
+|Relationen
+|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+
+|Betreff
+|Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
+// prüfen, ob das so stimmt.
+
+|Erstellt am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Aktualisiert am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Tags
+|Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
+// prüfen, ob das so stimmt.
+
+|Anhänge
+|In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
+
+|Abgerechnete Nachrichten
+|In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
+
+|Abgerechnete Minuten
+|In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
+
+|Abonniert
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+
+|Kontextmenü
+|Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
+
+|====
 
 Über die Schaltfläche *Spalten konfigurieren* (icon:settings[set=material]) ganz oben rechts in der Übersicht kannst du bereits angezeigte Spalten in der Übersicht wieder deaktivieren.
+
+//// 
+TODO: Im Ordner "Meine Nachrichten" gibt es auch eine Gruppenfunktion.
+////
 
 [#papierkorb]
 == Papierkorb 
@@ -793,35 +914,65 @@ Wird es in Zukunft möglich sein, alle Nachrichten aus dem Papierkorb mit einem 
 
 In Papierkorb des Messengers kannst du dir die folgenden Spalten anzeigen lassen:
 
-* Auswahl
-** Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
-* Status
-** Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht noch ungelesen ist. 
-* Abgekürzte ID
-* Herkunft
-** Zeigt mit einem Symbol die Herkunft der Nachricht an. 
+[[table-configure-columns-trash]]
+.Papierkorb: Spalten konfigurieren
+[cols="1,3"]
+|====
+|Spalte |Erläuterung
+
+|Relationen erweitern
+|Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
+
+|Auswahl
+|Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
+
+|Status
+|Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
+
+
+|Abgekürzte ID
+|Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
+
+|Herkunft
+|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
-* Relationen
-** Hier werden die Relationen zur Nachricht angezeigt, z.B. die Kontakt-ID oder die Auftrags-ID.
-* Betreff
-* Erstellt am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde.
-* Aktualisiert am
-** Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde.
-* Tags
-** Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Nachricht zugeordnet sind.
-* Anhänge
-** In der Spalte icon:attach_file[set=material] wird die Anzahl der Anhänge angezeigt.
-* Abgerechnete Nachrichten
-** In der Spalte icon:credit_card[set=material] wird die Summe der abgerechneten Nachrichten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abgerechnete Minuten
-** In der Spalte icon:av_timer[set=material] wird die Summe der abgerechneten Minuten angezeigt, wenn du mit deiner Maus über das Symbol fährst.
-* Abonniert
-** In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
-* <<#kontextmenue, Kontextmenü>>
+
+|Relationen
+|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+
+|Betreff
+|Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
+// prüfen, ob das so stimmt.
+
+|Erstellt am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Aktualisiert am
+|Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
+
+|Tags
+|Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
+// prüfen, ob das so stimmt.
+
+|Anhänge
+|In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
+
+|Abgerechnete Nachrichten
+|In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
+
+|Abgerechnete Minuten
+|In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
+
+|Abonniert
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+
+|Kontextmenü
+|Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
+
+|====
 
 Über die Schaltfläche *Spalten konfigurieren* (icon:settings[set=material]) ganz oben rechts in der Übersicht kannst du bereits angezeigte Spalten in der Übersicht wieder deaktivieren.
 
 //// 
-Im Papierkorb gibt es auch eine Gruppenfunktion.
+TODO: Im Papierkorb gibt es auch eine Gruppenfunktion.
 ////
